# lost-in-the-mess

./: .gitignore  AGENT.md  AGENTS.md  CHALLENGE.md  Cargo.toml  PRESENTATION.md  README.md  SUBMISSION.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  video.rs
crates/app/src/tui/: app.rs  camera.rs  events.rs  mod.rs  ui.rs
crates/app_sdk/: Cargo.toml
crates/app_sdk/src/: broadcast.rs  builder.rs  error.rs  lib.rs  message.rs  node.rs  policy.rs  video.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/delivery/: Cargo.toml
crates/delivery/src/: frame.rs  lib.rs  mock.rs  scratch.rs
crates/delivery/tests/: integration_test.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: crypto.rs  frame.rs  lib.rs  mock.rs  radio.rs  replay.rs
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
dashboard/src/: App.svelte  RaptorCanvas.svelte  app.css  main.js
dashboard/src/lib/: Composer.svelte  MapView.svelte  MessageLog.svelte  Metrics.svelte  NodeGrid.svelte  NodeList.svelte  PacketLog.svelte  SendBox.svelte  Sidebar.svelte  StatusBar.svelte  Streams.svelte  TabBar.svelte  TopologyView.svelte
lost-in-the-mes-h-s-design-system/: README.md
lost-in-the-mes-h-s-design-system/project/: README.md  SKILL.md  colors_and_type.css
lost-in-the-mes-h-s-design-system/project/fonts/: README.txt
lost-in-the-mes-h-s-design-system/project/preview/: _card.css  brand-icons.html  brand-marks.html  brand-signal-rings.html  brand-topology.html  brand-wordmark.html  colors-accents.html  colors-bone.html  colors-ink.html  colors-prr.html  components-buttons.html  components-chips.html  components-inputs.html  components-node-card.html  components-packet-log.html  components-tabs.html  components-uplink.html  spacing-radii.html  spacing-ramp.html  spacing-shadows.html  type-body.html  type-display.html  type-mono.html
lost-in-the-mes-h-s-design-system/project/ui_kits/dashboard/: App.jsx  Composer.jsx  MeshState.jsx  NodeGrid.jsx  NodeInspector.jsx  PacketLog.jsx  Primitives.jsx  README.md  Sidebar.jsx  StatusBar.jsx  TopologyView.jsx  UplinkApps.jsx  index-print.html  index.html  styles.css
scripts/: run-api.sh  run-ops.sh  setup-iface.sh
