[package]
name = "litm-api"
version = "0.1.0"
edition = "2024"

[dependencies]
litm-common = { path = "../common" }
litm-transport = { path = "../transport" }
litm-delivery = { path = "../delivery" }
litm-mesh = { path = "../mesh" }

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
