[package]
name = "litm-api"
version = "0.1.0"
edition = "2024"

[dependencies]
app_sdk     = { path = "../app_sdk" }
litm-common = { path = "../common" }

axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tokio-stream = { version = "0.1.18", features = ["sync"] }
