[package]
name = "litm-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
app_sdk     = { path = "../app_sdk" }
litm-common = { path = "../common" }
tokio = { version = "1.37", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
socket2 = { version = "0.5", features = ["all"] }
v4l = "0.14.0"
jpeg-encoder = "0.7.0"
