[package]
name = "litm-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "litm-app"
path = "src/main.rs"

[dependencies]
app_sdk     = { path = "../app_sdk" }
litm-common = { path = "../common" }
tokio       = { version = "1.37", features = ["full"] }
ratatui     = "0.29"
crossterm   = { version = "0.28", features = ["event-stream"] }
chrono      = { version = "0.4", default-features = false, features = ["clock"] }
anyhow      = "1"
futures     = "0.3"
clap        = { version = "4.4", features = ["derive"] }
