[package]
name = "litm-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
litm-common = { path = "../common" }
tokio = { version = "1.37", features = ["full"] }
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
rand = "0.8"
blake3 = "1.5"
