[package]
name = "litm-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
litm-common       = { path = "../common" }

# Crypto
chacha20poly1305  = "0.10"
hkdf              = "0.12"
sha2              = "0.10"
zeroize           = { version = "1", features = ["derive"] }

# Radio
wfb_rs            = { git = "https://github.com/kova-labs/kova-wfb-rs" }

# Plumbing
tokio             = { version = "1", features = ["sync", "rt", "rt-multi-thread", "time", "macros", "net"] }
crossbeam-channel = "0.5"
tracing           = "0.1"
socket2           = { version = "0.5", features = ["all"] }
